fix z-index for Edge

--- a/src/apps/esponFuore/styles/index.scss
+++ b/src/apps/esponFuore/styles/index.scss
@@ -148,7 +148,7 @@ $headerHeight: m(2);
 
 .ptr-panther-select-list.esponFuore-indicator-select-list {
 	padding-top: 3rem;
-	z-index: 40;
+	z-index: 15;
 }
 .esponFuore-indicator-select-list.ptr-panther-select-list > div > div {
 	height: 100%;
